--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # 应用服务 WEB 访问端口
 server.port=8080
 # Email
-email.username=lai
+email.username=赖
 email.password=123456
 email.host=smtp.qq.com
 email.port=465
