--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ email.username=赖
 email.password=123456
 email.host=smtp.qq.com
 email.port=465
+#数据库驱动
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#数据库地址
+spring.datasource.url=jdbc:mysql://localhost:3306/mybatis
+#数据库账号
+spring.datasource.username=root
+#密数据库密码
+spring.datasource.password=123456
