--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mybatis
 spring.datasource.username=root
 #密数据库密码
 spring.datasource.password=123456
+#MybatisPlus
+mybatis-plus.type-aliases-package=org.lai.springboot.model
+mybatis-plus.config-location=classpath:mybatis-config.xml
+mybatis-plus.mapper-locations=classpath*:/mapper/**/*.xml
+mybatis-plus.global-config.db-config.id-type=assign_id
