--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,7 @@ spring.datasource.password=123456
 #MybatisPlus
 mybatis-plus.type-aliases-package=org.lai.springboot.model
 mybatis-plus.config-location=classpath:mybatis-config.xml
-mybatis-plus.mapper-locations=classpath*:/mapper/**/*.xml
+mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
 mybatis-plus.global-config.db-config.id-type=assign_id
+#日志级别
+#logging.config=classpath:logback.xml
